# black-hole-simulation

./: .clang-format  .gitignore  CMakeLists.txt  IMPLEMENTATION_GUIDE.md  QUICKSTART.md  README.md  REFACTOR_SUMMARY.md  SAGITTARIUS_A.md  black_hole.cpp  build.sh  geodesic.comp  validate_physics.py
.github/workflows/: ci.yml
include/: adaptive_integrator.h  constants.h  integrator.h  kerr.h  mat4.h  raytracer.h  schwarzschild.h  shader.h  vec4.h
shaders/: fragment.glsl  fragment_minimal.glsl  fragment_simple_geometry.glsl  fragment_solid.glsl  fragment_test.glsl  geodesic.comp  vertex.glsl
src/: black_hole.cpp  main.cpp  main_gpu.cpp  shader.cpp
